# windows_legacy_direct3d

./: Cargo.toml  LICENSE  Readme.md  build.rs
.direct3d/include/: .gitignore  Readme.md
.metadata/: generate.proj  main.cpp
.windows/winmd/: Microsoft.Win32.Graphics.Direct3D.Legacy.winmd
src/: Readme.md  bindings.rs  lib.rs
